--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="container">
                 <div class="d-flex foot">
                     <div class="foot">Logo</div>
-                    <div class="foot">Bottone</div>
+                    <div class="foot">bottone</div>
                 </div>
             </div>
         </footer>
